# FastAPI

./: README.md  alembic.ini  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6e725a527a63_create_products_table.py  a12f55fa17c5_create_orders_product_association_two_.py  cef809548f69_create_orders_table.py  e75ba540d110_create_profile_table.py  eb5da2ae8130_create_posts_table.py  f8d435d7bcff_create_orders_product_association_table.py  fa1e4f7ddb4d_create_users_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  post.py  user.py
